# weave

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: __init__.py  basic_usage.py
src/weave_generator/: Curved_Twill_generator.py  Satin_weave_generator.py  Waved_twill.py  diamond_weave_generator.py  matrix_operations.py  simple_weave_generator.py  unified_interface.py
src/weave_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_generators.py  test_quick.py
