[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weave-generator"
version = "1.0.2"
authors = [
  { name = "Weave Generator Team", email = "weave@example.com" },
]
description = "纺织组织生成器 - 支持9种常见组织结构的Python库"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/weave-generator/weave-generator"
Documentation = "https://github.com/weave-generator/weave-generator#readme"
Repository = "https://github.com/weave-generator/weave-generator.git"

[project.scripts]
weave-gen = "weave_generator.unified_interface:main"
